Respect filters for counters

The counting is done in the AccountsFilterModel now.
So to have those counters one will have to use the AccountsFilterModel.

BUG: 300956
FIXED-IN: 0.5
REVIEW: 105130