KTp/Models/accounts-model-item.cpp
@@ -34,8 +34,7 @@
 struct AccountsModelItem::Private
 {
     Private(const Tp::AccountPtr &account)
-        : mAccount(account),
-          mOnlineCount(0)
+        : mAccount(account)
     {
     }
 
@@ -43,7 +42,6 @@ struct AccountsModelItem::Private
     void setStatusMessage(const QString &value);
 
     Tp::AccountPtr mAccount;
-    int mOnlineCount;
 };
 
 void AccountsModelItem::Private::setStatus(const QString &value)
@@ -195,10 +193,6 @@ QVariant AccountsModelItem::data(int role) const
         return mPriv->mAccount->connectionStatus();
     case AccountsModel::ConnectionStatusReasonRole:
         return mPriv->mAccount->connectionStatusReason();
-    case AccountsModel::TotalUsersCountRole:
-        return size();
-    case AccountsModel::OnlineUsersCountRole:
-        return mPriv->mOnlineCount;
     default:
         return QVariant();
     }
@@ -300,7 +294,7 @@ void AccountsModelItem::onContactsChanged(const Tp::Contacts &addedContacts,
         Q_EMIT childrenAdded(this, newNodes);
     }
 
-    countOnlineContacts();
+    onChanged();
 }
 
 void AccountsModelItem::onStatusChanged(Tp::ConnectionStatus status)
@@ -408,22 +402,7 @@ void AccountsModelItem::addKnownContacts()
         Q_EMIT childrenAdded(this, newNodes);
     }
 
-    countOnlineContacts();
-}
-
-void AccountsModelItem::countOnlineContacts()
-{
-    int tmpCounter = 0;
-    for (int i = 0; i < size(); ++i) {
-        ContactModelItem* contactNode = qobject_cast<ContactModelItem*>(childAt(i));
-        Q_ASSERT(contactNode);
-        if (contactNode->data(AccountsModel::PresenceTypeRole).toUInt() != Tp::ConnectionPresenceTypeOffline
-            && contactNode->data(AccountsModel::PresenceTypeRole).toUInt() != Tp::ConnectionPresenceTypeUnknown) {
-            tmpCounter++;
-        }
-    }
-
-    mPriv->mOnlineCount = tmpCounter;
+    onChanged();
 }
 
 #include "accounts-model-item.moc"
