KTp/Models/accounts-model-item.h
@@ -55,8 +55,6 @@ public:
 
     void clearContacts();
 
-    void countOnlineContacts();
-
 Q_SIGNALS:
     void connectionStatusChanged(const QString &accountId, int status);
 
